--- a/.github/workflows/ci-client.yml
+++ b/.github/workflows/ci-client.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
+        node-version: [14.19.1]
     env:
       INSTALL_NODE_MODULES: true
     steps:
