--- a/.github/workflows/ci-e2e.yml
+++ b/.github/workflows/ci-e2e.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8]
-        node-version: [14.x]
+        node-version: [14.19.1]
         e2e: [a, b]
     env:
       INSTALL_NODE_MODULES: true
