--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,18 +4,19 @@ pep8
 flake8
 flake8-docstrings
 pydocstyle<4.0
-wooper
+wooper==0.4.4
 requests
-requests-mock
-icalendar==3.11.1
+requests-mock==1.8.0
+icalendar>=4.0.3,<4.1
 coverage==4.3.4
-deepdiff==3.3.0
+deepdiff
 coveralls
 mock
-httmock>=1.2.3,<1.3
-responses>=0.10.6,<0.11
-pytest==5.2.2
-pytest-env==0.6.2
+httmock==1.4.0
+responses
+pytest
+pytest-env
 
+-e .
 # Install in editable state so we get feature fixtures
 -e git+https://github.com/superdesk/superdesk-core.git@develop#egg=superdesk-core
