--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ exclude=env,bin,lib,include,client,src
 ignore = F811,D200,D202,D205,D400,D401,D100,D101,D102,D103,D104,D105,D107,W503,W504,W605,F401,E261,F841,
          B010,B009,B007,B305,B011,
          E203,E501  # black compatibility
+         B023,B020,B017,B019,  # update to flake8 5
 
 [extract_messages]
 input_dirs = server/planning
