Use pytest instead of nosetest

--- a/.github/workflows/ci-client.yml
+++ b/.github/workflows/ci-client.yml
@@ -11,33 +11,10 @@ jobs:
     env:
       INSTALL_NODE_MODULES: true
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Set up NodeJS ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Cache NPM
-        uses: actions/cache@v2
-        with:
-          # npm cache files are stored in `~/.npm on Linux/MacOS
-          path: ~/.npm
-          key: ${{ runner.OS }}-node-${{ hashFiles('package.json') }}
-          restore-keys: |
-            ${{ runner.OS }}-node-
-            ${{ runner.OS }}-
-      - name: Cache pip
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('server/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip
-            ${{ runner.os }}-
       - name: Setup Environment
         run: ./scripts/ci-install.sh
       - name: Start Services
