--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,7 @@ exclude = '''
     | env
 )
 '''
+
+[tool.pytest.ini_options]
+testpaths = ["server/planning", "server/tests/prod_api"]
+python_files = "*_test.py *_tests.py test_*.py tests_*.py tests.py test.py"
