--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "simulant": "^0.2.2",
     "sinon": "^4.5.0",
     "superdesk-code-style": "1.5.0",
-    "superdesk-core": "github:superdesk/superdesk-client-core#release/2.5",
+    "superdesk-core": "github:superdesk/superdesk-client-core#develop",
     "ts-node": "~7.0.1",
     "tslint": "5.11.0",
     "typescript-eslint-parser": "^18.0.0"
