--- a/e2e/server/requirements.txt
+++ b/e2e/server/requirements.txt
@@ -1,4 +1,4 @@
 gunicorn==19.7.1
 honcho==1.0.1
-git+https://github.com/superdesk/superdesk-core.git@master#egg=superdesk-core
+git+https://github.com/superdesk/superdesk-core.git@v2.4.4#egg=superdesk-core
 -e ../../
