Update ui-framework and superdesk-client-core

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "redux-logger": "~3.0.6",
     "reselect": "~3.0.1",
     "rrule": "~2.2.9",
-    "superdesk-ui-framework": "^3.0.1-beta.28",
+    "superdesk-ui-framework": "^3.0.1-beta.30",
     "ts-loader": "3.5.0",
     "typescript": "3.9.7",
     "whatwg-fetch": "~2.0.4"
@@ -66,7 +66,7 @@
     "simulant": "^0.2.2",
     "sinon": "^4.5.0",
     "superdesk-code-style": "1.5.0",
-    "superdesk-core": "github:superdesk/superdesk-client-core#develop",
+    "superdesk-core": "github:superdesk/superdesk-client-core#beta/2.6-updated",
     "ts-node": "~7.0.1",
     "tslint": "5.11.0",
     "typescript-eslint-parser": "^18.0.0"
@@ -77,6 +77,6 @@
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.14",
     "react": "^16.9.0",
-    "superdesk-ui-framework": "3.0.1-beta.29"
+    "superdesk-ui-framework": "3.0.1-beta.30"
   }
 }
