refactored file using black

--- a/.github/workflows/lint-server.yml
+++ b/.github/workflows/lint-server.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
     - run: pip install black
-    - run: black --diff .
+    - run: black --check server
 
   flake8:
     runs-on: ubuntu-latest
