--- a/client/planning-extension/package.json
+++ b/client/planning-extension/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@types/angular": "1.6.50",
     "superdesk-code-style": "1.3.0",
-    "typescript": "3.7.2"
+    "typescript": "^4.9.5"
   },
   "superdeskExtension": {
     "translations-directory": "./translations"
