--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "rrule": "~2.2.9",
     "superdesk-ui-framework": "^3.0.0-rc12",
     "ts-loader": "3.5.0",
-    "typescript": "3.9.7",
+    "typescript": "~4.9.5",
     "whatwg-fetch": "~2.0.4"
   },
   "devDependencies": {
@@ -66,7 +66,7 @@
     "simulant": "^0.2.2",
     "sinon": "^4.5.0",
     "superdesk-code-style": "1.5.0",
-    "superdesk-core": "github:superdesk/superdesk-client-core#v2.6.0",
+    "superdesk-core": "github:superdesk/superdesk-client-core#hotfix/2.6.1",
     "ts-node": "~7.0.1",
     "tslint": "5.11.0",
     "typescript-eslint-parser": "^18.0.0"
