--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "rrule": "~2.2.9",
     "superdesk-ui-framework": "^3.0.0-rc12",
     "ts-loader": "3.5.0",
-    "typescript": "3.9.7",
+    "typescript": "~4.9.5",
     "whatwg-fetch": "~2.0.4"
   },
   "devDependencies": {
