--- a/client/planning-extension/package.json
+++ b/client/planning-extension/package.json
@@ -13,6 +13,6 @@
   "devDependencies": {
     "@types/angular": "1.6.50",
     "superdesk-code-style": "1.3.0",
-    "typescript": "3.7.2"
+    "typescript": "~4.9.5"
   }
 }
