--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "author": "Edouard Richard",
   "dependencies": {
     "dompurify": "^1.0.11",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.41",
     "nominatim-browser": "~2.0.2",
     "react-bootstrap": "0.32.1",
     "react-debounce-input": "3.2.0",
@@ -32,7 +34,7 @@
     "reselect": "~3.0.1",
     "rrule": "~2.2.9",
     "ts-loader": "3.5.0",
-    "typescript": "3.9.7",
+    "typescript": "~4.9.5",
     "whatwg-fetch": "~2.0.4"
   },
   "devDependencies": {
@@ -64,7 +66,7 @@
     "simulant": "^0.2.2",
     "sinon": "^4.5.0",
     "superdesk-code-style": "1.5.0",
-    "superdesk-core": "github:superdesk/superdesk-client-core#v2.5.2",
+    "superdesk-core": "github:superdesk/superdesk-client-core#hotfix/2.5.3",
     "ts-node": "~7.0.1",
     "tslint": "5.11.0",
     "typescript-eslint-parser": "^18.0.0"
@@ -72,8 +74,6 @@
   "peerDependencies": {
     "classnames": "^2.2.5",
     "lodash": "^4.17.19",
-    "moment": "^2.20.1",
-    "moment-timezone": "^0.5.14",
     "react": "^16.9.0",
     "superdesk-ui-framework": "^2.4.19"
   }
