[SDESK-6744] Improve displaying of coverage icons & avatars (#1800)
* use new avatar instead of CoverageIcon componet

* finished improvements on popup

* rename PlanningDateTime.scss to coverage-icons.scss

* remove unused code

* remove CoverageIcon

* use single avatars inside popover row

* use spacer for layout

* review and correct displayed data to match existing code
only design should change, not data itself

* update peer dependency

* forgotten icon in avatar placeholder ; zindex; spacer usage update

* fix lint

* show type icon also for unassigned coverages; include workflow state label to icon tooltip, don't show avatar icon in popover since there is already an icon there

* add overflow

* fix lint

* update ui-framework; fix tests

* status/state should only be displayed if there's a desk
as in the old implementation

* fix lint

* update usage of switch component

* cancelled coverage icons

* use gettext from superdeskApi

* address review comments

* use rem for line height

* update icon colors

* update ui-framework and usages of avatar group

---------

Co-authored-by: Tomas Kikutis <t.kikutis@gmail.com>

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "redux-logger": "~3.0.6",
     "reselect": "~3.0.1",
     "rrule": "~2.2.9",
-    "superdesk-ui-framework": "3.0.14",
+    "superdesk-ui-framework": "^3.0.30",
     "ts-loader": "3.5.0",
     "typescript": "~4.9.5",
     "whatwg-fetch": "~2.0.4"
@@ -78,6 +78,6 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
     "react": "^16.9.0",
-    "superdesk-ui-framework": "3.0.0-rc12"
+    "superdesk-ui-framework": "^3.0.19"
   }
 }
