--- a/e2e/server/requirements.txt
+++ b/e2e/server/requirements.txt
@@ -1,4 +1,2 @@
-gunicorn==19.7.1
-honcho==1.0.1
-git+https://github.com/superdesk/superdesk-core.git@develop#egg=superdesk-core
+-r ./core-requirements.txt
 -e ../../
