--- a/e2e/server/Procfile
+++ b/e2e/server/Procfile
@@ -1,3 +1,3 @@
-web: python3 -u web.py
 rest: gunicorn -c gunicorn_config.py wsgi
 wamp: python3 -u ws.py
+web: python3 -m http.server -d ../dist 9000
