Planning compatability fixes with client-core post-broadcasting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "client"
     ],
     "compilerOptions": {
+        "allowImportingTsExtensions": true,
         "baseUrl": "client",
         "skipLibCheck": true,
         "sourceMap": true,
