--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "author": "Edouard Richard",
   "dependencies": {
     "dompurify": "^1.0.11",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.43",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.44",
     "nominatim-browser": "~2.0.2",
     "react-bootstrap": "0.32.1",
     "react-debounce-input": "3.2.0",
@@ -39,11 +39,11 @@
     "whatwg-fetch": "~2.0.4"
   },
   "devDependencies": {
-    "@types/jasmine": "^3.10.7",
+    "@types/jasmine": "^3.10.18",
     "@types/lodash": "4.14.117",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.0",
-    "@types/redux-logger": "^3.0.11",
+    "@types/redux-logger": "^3.0.12",
     "@types/sinon": "^9.0.4",
     "@typescript-eslint/parser": "5.57.0",
     "btoa": "^1.1.2",
@@ -66,8 +66,8 @@
     "simulant": "^0.2.2",
     "sinon": "^4.5.0",
     "superdesk-code-style": "1.5.0",
-    "superdesk-core": "github:superdesk/superdesk-client-core#authoring-react-post-broadcasting",
-    "superdesk-ui-framework": "^3.0.63",
+    "superdesk-core": "github:superdesk/superdesk-client-core#develop",
+    "superdesk-ui-framework": "^3.0.66",
     "ts-node": "~7.0.1",
     "tslint": "5.11.0",
     "typescript-eslint-parser": "^18.0.0"
