--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "react-moment-proptypes": "^1.7.0",
     "react-portal": "~4.1.3",
     "react-sortable-hoc": "2.0.0",
-    "redux-logger": "~3.0.6",
     "reselect": "~3.0.1",
     "rrule": "~2.2.9",
     "ts-loader": "3.5.0",
@@ -43,7 +42,6 @@
     "@types/lodash": "4.14.117",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.0",
-    "@types/redux-logger": "^3.0.12",
     "@types/sinon": "^9.0.4",
     "@typescript-eslint/parser": "5.57.0",
     "btoa": "^1.1.2",
@@ -78,6 +76,9 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
     "react": "^16.9.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "superdesk-ui-framework": "^3.0.71"
   }
 }
