--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "simulant": "^0.2.2",
     "sinon": "^4.5.0",
     "superdesk-code-style": "1.5.0",
-    "superdesk-core": "github:superdesk/superdesk-client-core#v2.6.2",
+    "superdesk-core": "github:superdesk/superdesk-client-core#hotfix/2.6.3",
     "superdesk-ui-framework": "^3.0.58",
     "ts-node": "~7.0.1",
     "tslint": "5.11.0",
