--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "fix": "eslint client --ext=jsx --ext=js --ext=tsx --ext=ts --ext=spec --fix",
     "hint": "eslint client --ext=jsx --ext=js --ext=tsx --ext=ts --ext=spec",
     "lint": "eslint client --ext=jsx --ext=js --ext=tsx --ext=ts --ext=spec --quiet",
-    "unit_test": "node --max-old-space-size=8192 ./node_modules/.bin/karma start karma.conf.js --log-level debug --display-error-details --single-run",
-    "karma": "node --max-old-space-size=8192 ./node_modules/.bin/karma start karma.conf.js",
-    "test": "npm run hint && npm run unit_test",
+    "test": "karma start karma.conf.js --log-level debug --display-error-details --single-run",
+    "karma": "karma start karma.conf.js",
     "debug_unit_test": "karma start karma.conf.js --browsers=Chrome"
   },
   "author": "Edouard Richard",
@@ -46,15 +45,16 @@
     "@typescript-eslint/parser": "5.57.0",
     "btoa": "^1.1.2",
     "cheerio": "1.0.0-rc.10",
+    "csstype": "2.6.17",
     "enzyme": "~3.11.0",
     "enzyme-adapter-react-16": "^1.15.8",
     "eslint": "6.6.0",
     "eslint-plugin-react": "7.16.0",
     "jasmine": "^2.99.0",
     "jasmine-reporters": "^2.5.2",
-    "karma": "^2.0.0",
+    "karma": "^6.4.2",
     "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "^1.0.1",
+    "karma-cli": "^2.0.0",
     "karma-jasmine": "^1.1.1",
     "karma-junit-reporter": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
@@ -65,7 +65,7 @@
     "sinon": "^4.5.0",
     "superdesk-code-style": "1.5.0",
     "superdesk-core": "github:superdesk/superdesk-client-core#develop",
-    "superdesk-ui-framework": "^3.0.75",
+    "superdesk-ui-framework": "^3.0.76",
     "ts-node": "~7.0.1",
     "tslint": "5.11.0",
     "typescript-eslint-parser": "^18.0.0"
