--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "sinon": "^4.5.0",
     "superdesk-code-style": "1.5.0",
     "superdesk-core": "github:superdesk/superdesk-client-core#release/2.7",
-    "superdesk-ui-framework": "^3.0.75",
+    "superdesk-ui-framework": "^3.1.9",
     "ts-node": "~7.0.1",
     "tslint": "5.11.0",
     "typescript-eslint-parser": "^18.0.0"
@@ -82,6 +82,6 @@
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "superdesk-ui-framework": "^3.0.71"
+    "superdesk-ui-framework": "*"
   }
 }
