--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "superdesk-planning",
-  "version": "2.7.0-rc8",
+  "version": "2.7.0",
   "license": "AGPL-3.0",
   "description": "",
   "repository": {
