--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-moment-proptypes": "^1.7.0",
     "react-portal": "~4.1.3",
     "react-sortable-hoc": "2.0.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "~3.0.1",
     "rrule": "~2.2.9",
     "ts-loader": "3.5.0",
