--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "superdesk-planning",
-  "version": "2.8.0-dev",
+  "version": "2.7.0-dev",
   "license": "AGPL-3.0",
   "description": "",
   "repository": {
@@ -30,7 +30,6 @@
     "react-moment-proptypes": "^1.7.0",
     "react-portal": "~4.1.3",
     "react-sortable-hoc": "2.0.0",
-    "redux-thunk": "^2.3.0",
     "reselect": "~3.0.1",
     "rrule": "~2.2.9",
     "ts-loader": "3.5.0",
@@ -62,14 +61,11 @@
     "karma-verbose-reporter": "0.0.6",
     "karma-webpack": "^2.0.13",
     "react-test-renderer": "16.2.0",
-    "redux": "^4.2.1",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.2",
     "simulant": "^0.2.2",
     "sinon": "^4.5.0",
     "superdesk-code-style": "1.5.0",
     "superdesk-core": "github:superdesk/superdesk-client-core#develop",
-    "superdesk-ui-framework": "^3.1.9",
+    "superdesk-ui-framework": "^3.0.76",
     "ts-node": "~7.0.1",
     "tslint": "5.11.0",
     "typescript-eslint-parser": "^18.0.0"
@@ -80,9 +76,9 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
     "react": "^16.9.0",
-    "redux": "^4.2.1",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "superdesk-ui-framework": "*"
+    "superdesk-ui-framework": "^3.0.71"
   }
 }
