--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -19,4 +19,4 @@ pytest-env
 
 -e .
 # Install in editable state so we get feature fixtures
--e git+https://github.com/superdesk/superdesk-core.git@develop#egg=superdesk-core
+-e git+https://github.com/superdesk/superdesk-core.git@hg/flask-v3-unstable#egg=superdesk-core
