--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -1,8 +1,10 @@
 version: "3.8"
 
+name: superdesk-planning-e2e
+
 services:
     elastic:
-        image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.23
         environment:
             - discovery.type=single-node
         networks:
